--- a/adduser/Makefile
+++ b/adduser/Makefile
@@ -15,6 +15,7 @@ install: compile
 	mkdir -p $(FSROOT)/etc
 clean:
 	rm -f *.o
+	rm -f *.swp
 $(EXECUTABLE): $(OBJECTS) 
 	$(CC) $(LDFLAGS) $(OBJECTS) -o $@
 
