--- a/passwd/Makefile
+++ b/passwd/Makefile
@@ -14,7 +14,7 @@ install: compile
 	cp $(EXECUTABLE) $(BIN)/passwd
 clean:
 	rm -f *.o
-	rm -f *.swp
+	rm -f .*.swp
 $(EXECUTABLE): $(OBJECTS) 
 	$(CC) $(LDFLAGS) $(OBJECTS) -o $@
 
