Improved after-compile clean

--- a/adduser/Makefile
+++ b/adduser/Makefile
@@ -17,6 +17,7 @@ clean:
 	rm -f *.o
 	rm -f .*.swp
 	rm -f adduser
+	rm -rf crypto/sha512/sha512.o
 $(EXECUTABLE): $(OBJECTS) 
 	$(CC) $(LDFLAGS) $(OBJECTS) -o $@
 
